--- a/UNH.ipynb
+++ b/UNH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "ff597b69-377e-4eb4-931e-6dad9e7cc800",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "dd6dae29-a7e4-4b44-b734-1b4d7da5705b",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "8e4ba384-d2d0-4122-bb93-77b6df557d44",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "489ea63d-9f29-43f3-86be-903d05141879",
    "metadata": {},
    "outputs": [
@@ -144,22 +144,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "d0997f29-3052-4d63-bf1e-b70f4d52d95f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "The DType <class 'numpy.dtype[datetime64]'> could not be promoted by <class 'numpy.dtype[float64]'>. This means that no common DType exists for the given inputs. For example they cannot be stored in a single array unless the dtype is `object`. The full list of DTypes is: (<class 'numpy.dtype[datetime64]'>, <class 'numpy.dtype[float64]'>)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [77]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m lr_model \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[0;32m     13\u001b[0m lr_model\u001b[38;5;241m.\u001b[39mfit(X,y)\n\u001b[1;32m---> 15\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[43mlr_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResults for linear regression on training data using Date\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m  Default settings\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32m~\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_base.py:355\u001b[0m, in \u001b[0;36mLinearModel.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    341\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[0;32m    342\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    343\u001b[0m \u001b[38;5;124;03m    Predict using the linear model.\u001b[39;00m\n\u001b[0;32m    344\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    353\u001b[0m \u001b[38;5;124;03m        Returns predicted values.\u001b[39;00m\n\u001b[0;32m    354\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 355\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_decision_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_base.py:339\u001b[0m, in \u001b[0;36mLinearModel._decision_function\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    336\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m    338\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(X, accept_sparse\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoo\u001b[39m\u001b[38;5;124m\"\u001b[39m], reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m--> 339\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msafe_sparse_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoef_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdense_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mintercept_\n",
-      "File \u001b[1;32m~\\miniconda3\\lib\\site-packages\\sklearn\\utils\\extmath.py:189\u001b[0m, in \u001b[0;36msafe_sparse_dot\u001b[1;34m(a, b, dense_output)\u001b[0m\n\u001b[0;32m    187\u001b[0m         ret \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(a, b)\n\u001b[0;32m    188\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 189\u001b[0m     ret \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[0;32m    191\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m    192\u001b[0m     sparse\u001b[38;5;241m.\u001b[39missparse(a)\n\u001b[0;32m    193\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m sparse\u001b[38;5;241m.\u001b[39missparse(b)\n\u001b[0;32m    194\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m dense_output\n\u001b[0;32m    195\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(ret, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoarray\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    196\u001b[0m ):\n\u001b[0;32m    197\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ret\u001b[38;5;241m.\u001b[39mtoarray()\n",
-      "\u001b[1;31mTypeError\u001b[0m: The DType <class 'numpy.dtype[datetime64]'> could not be promoted by <class 'numpy.dtype[float64]'>. This means that no common DType exists for the given inputs. For example they cannot be stored in a single array unless the dtype is `object`. The full list of DTypes is: (<class 'numpy.dtype[datetime64]'>, <class 'numpy.dtype[float64]'>)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results for polynomial regression on training data\n",
+      "Polynomial regression with degree  3\n",
+      "  Default settings\n",
+      "Internal parameters:\n",
+      "    Bias is  -1291.636882395116\n",
+      "    Coefficients [4.98635876e-89 0.00000000e+00 3.95298756e-52]\n",
+      "    Score 0.9536344165617691\n",
+      "MAE is  15.481108737701264\n",
+      "RMSE is  19.579711568687287\n",
+      "MSE is  383.3651051129867\n",
+      "R^2   0.9536344165617691\n",
+      "\n",
+      "Results for polynomial regression on test data\n",
+      "MAE is  17.262544903038037\n",
+      "RMSE is  22.341690915590142\n",
+      "MSE is  499.1511529677631\n",
+      "R^2     0.9461272958372452\n"
      ]
     }
    ],
@@ -168,32 +177,41 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import ElasticNet\n",
+    "\n",
+    "power = 3\n",
+    "poly_process = PolynomialFeatures(degree=power, include_bias=False)\n",
+    "\n",
     "\n",
     "X = train_set[['Date']]\n",
-    "y = train_set[['Close']]\n",
+    "y = train_set['Close']\n",
+    "X_poly = poly_process.fit_transform(X)\n",
     "\n",
     "X_test = test_set[['Date']]\n",
-    "y_test = test_set[['Close']]\n",
+    "y_test = test_set['Close']\n",
+    "X_poly_test = poly_process.fit_transform(X_test)\n",
     "\n",
     "lr_model = LinearRegression()\n",
-    "lr_model.fit(X,y)\n",
+    "lr_model.fit(X_poly,y)\n",
     "\n",
-    "y_pred = lr_model.predict(X)\n",
-    "print('Results for linear regression on training data using Date')\n",
+    "y_pred = lr_model.predict(X_poly)\n",
+    "print('Results for polynomial regression on training data')\n",
+    "print('Polynomial regression with degree ', power)\n",
     "print('  Default settings')\n",
     "print('Internal parameters:')\n",
     "print('    Bias is ', lr_model.intercept_)\n",
     "print('    Coefficients', lr_model.coef_)\n",
-    "print('    Score', lr_model.score(X,y))\n",
+    "print('    Score', lr_model.score(X_poly,y))\n",
     "\n",
     "print('MAE is ', mean_absolute_error(y, y_pred))\n",
     "print('RMSE is ', np.sqrt(mean_squared_error(y, y_pred)))\n",
     "print('MSE is ', mean_squared_error(y, y_pred))\n",
     "print('R^2  ', r2_score(y, y_pred))\n",
     "\n",
-    "y_test_pred = lr_model.predict(X_test)\n",
+    "y_test_pred = lr_model.predict(X_poly_test)\n",
     "print()\n",
-    "print('Results for linear regression on test data using Year')\n",
+    "print('Results for polynomial regression on test data')\n",
     "\n",
     "print('MAE is ', mean_absolute_error(y_test, y_test_pred))\n",
     "print('RMSE is ', np.sqrt(mean_squared_error(y_test, y_test_pred)))\n",
@@ -203,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "86016bba-2ea3-43e3-91da-b786969937b9",
    "metadata": {},
    "outputs": [
