--- a/Delivery.ipynb
+++ b/Delivery.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 150,
    "id": "d0997f29-3052-4d63-bf1e-b70f4d52d95f",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 153,
    "id": "86016bba-2ea3-43e3-91da-b786969937b9",
    "metadata": {},
    "outputs": [
@@ -412,29 +412,30 @@
      "output_type": "stream",
      "text": [
       "Results for elastic net on training data\n",
-      "Polynomial regression with degree  3\n",
+      "Polynomial regression with degree  8\n",
       "  Default settings\n",
       "Internal parameters:\n",
-      "    Bias is  -12270.660311125115\n",
-      "    Coefficients [ 1.28342102e-14 -1.91726200e-33 -7.86209550e-52]\n",
-      "    Score 0.34789408503369945\n",
-      "MAE is  19.824551475444974\n",
-      "RMSE is  22.790723714909184\n",
-      "MSE is  519.4170874493238\n",
-      "R^2   0.34789408503369945\n",
+      "    Bias is  -29144.154138050217\n",
+      "    Coefficients [ 2.37928965e-014 -1.03413703e-033 -4.23974910e-052 -1.95445934e-070\n",
+      " -9.60537237e-089 -4.91477259e-107 -2.58523838e-125 -1.38748009e-143]\n",
+      "    Score 0.8193702653476451\n",
+      "MAE is  9.923624495333986\n",
+      "RMSE is  11.994818161218967\n",
+      "MSE is  143.8756627207084\n",
+      "R^2   0.8193702653476451\n",
       "\n",
       "Results for elastic net on test data\n",
-      "MAE is  22.85460824199511\n",
-      "RMSE is  26.434769868903594\n",
-      "MSE is  698.7970580218933\n",
-      "R^2     0.32358007901791874\n"
+      "MAE is  12.474985321133572\n",
+      "RMSE is  14.383357935980168\n",
+      "MSE is  206.8809855145237\n",
+      "R^2     0.7997438336810443\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jstcl\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:634: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 6.181e+04, tolerance: 1.896e+01\n",
+      "C:\\Users\\jstcl\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:634: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.712e+04, tolerance: 1.896e+01\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
     }
@@ -443,7 +444,7 @@
     "\n",
     "\n",
     "\n",
-    "power = 3\n",
+    "power = 8\n",
     "poly_process = PolynomialFeatures(degree=power, include_bias=False)\n",
     "\n",
     "\n",
