--- a/Insurance.ipynb
+++ b/Insurance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "id": "ff597b69-377e-4eb4-931e-6dad9e7cc800",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "id": "dd6dae29-a7e4-4b44-b734-1b4d7da5705b",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "id": "8e4ba384-d2d0-4122-bb93-77b6df557d44",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "b70ac920-e7ee-49f7-83eb-28d48f41e825",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "id": "874d710b-4e31-475e-89f7-87bf6f14550f",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "id": "c60a4de1-080c-4d9c-bf53-4610690b6ebc",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "id": "be0a4ab4-ab1b-47da-ba23-0a6a1c9bf000",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "id": "22e8d7fd-f991-4362-bfba-c4761ebd6ffe",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "id": "321f010d-e637-4627-91d6-4e08a6c6ee48",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "id": "6fb11b33-6531-4a6e-a647-41d607b3c531",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "id": "489ea63d-9f29-43f3-86be-903d05141879",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "id": "d0997f29-3052-4d63-bf1e-b70f4d52d95f",
    "metadata": {},
    "outputs": [
@@ -403,19 +403,19 @@
       "Polynomial regression with degree  3\n",
       "  Default settings\n",
       "Internal parameters:\n",
-      "    Bias is  26.15406295163936\n",
-      "    Coefficients [-5.03490316e-91  0.00000000e+00 -3.98676807e-54]\n",
-      "    Score 0.20066872989594386\n",
-      "MAE is  1.3429311686531353\n",
-      "RMSE is  1.6842481193987728\n",
-      "MSE is  2.836691727698303\n",
-      "R^2   0.20066872989594386\n",
+      "    Bias is  -357.5031429467148\n",
+      "    Coefficients [1.44751385e-89 0.00000000e+00 1.14617935e-52]\n",
+      "    Score 0.907654778638979\n",
+      "MAE is  6.185535639748786\n",
+      "RMSE is  7.7385749127193355\n",
+      "MSE is  59.88554167976907\n",
+      "R^2   0.907654778638979\n",
       "\n",
       "Results for polynomial regression on test data\n",
-      "MAE is  1.3271907977502118\n",
-      "RMSE is  1.6987712134754418\n",
-      "MSE is  2.8858236357328253\n",
-      "R^2     0.047739027457221805\n"
+      "MAE is  6.1000934361900185\n",
+      "RMSE is  7.814786238209164\n",
+      "MSE is  61.07088394890334\n",
+      "R^2     0.9281004920170124\n"
      ]
     }
    ],
@@ -432,11 +432,11 @@
     "\n",
     "\n",
     "X = train_set[['Date']]\n",
-    "y = train_set['Close']\n",
+    "y = train_set['Average']\n",
     "X_poly = poly_process.fit_transform(X)\n",
     "\n",
     "X_test = test_set[['Date']]\n",
-    "y_test = test_set['Close']\n",
+    "y_test = test_set['Average']\n",
     "X_poly_test = poly_process.fit_transform(X_test)\n",
     "\n",
     "lr_model = LinearRegression()\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "id": "86016bba-2ea3-43e3-91da-b786969937b9",
    "metadata": {},
    "outputs": [
@@ -480,26 +480,26 @@
       "Polynomial regression with degree  3\n",
       "  Default settings\n",
       "Internal parameters:\n",
-      "    Bias is  17.84283855857816\n",
-      "    Coefficients [ 1.27878114e-17 -6.29344791e-36 -3.01944581e-54]\n",
-      "    Score 0.20069660991104477\n",
-      "MAE is  1.3426045630747037\n",
-      "RMSE is  1.6842187465503555\n",
-      "MSE is  2.836592786231651\n",
-      "R^2   0.20069660991104477\n",
+      "    Bias is  -1437.6460786709008\n",
+      "    Coefficients [ 1.00846957e-15 -1.32761781e-35 -7.29461359e-54]\n",
+      "    Score 0.9081044892110932\n",
+      "MAE is  6.100421046066992\n",
+      "RMSE is  7.71970893247344\n",
+      "MSE is  59.59390600211021\n",
+      "R^2   0.9081044892110932\n",
       "\n",
       "Results for elastic net on test data\n",
-      "MAE is  1.3267555238439366\n",
-      "RMSE is  1.698487430337132\n",
-      "MSE is  2.8848595510132338\n",
-      "R^2     0.04805715509375663\n"
+      "MAE is  5.904232811785531\n",
+      "RMSE is  7.689272110222986\n",
+      "MSE is  59.12490558505306\n",
+      "R^2     0.930391516444028\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jstcl\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:634: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 3.376e+02, tolerance: 8.446e-02\n",
+      "C:\\Users\\jstcl\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:634: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 7.092e+03, tolerance: 1.543e+01\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
     }
@@ -513,11 +513,11 @@
     "\n",
     "\n",
     "X = train_set[['Date']]\n",
-    "y = train_set['Close']\n",
+    "y = train_set['Average']\n",
     "X_poly = poly_process.fit_transform(X)\n",
     "\n",
     "X_test = test_set[['Date']]\n",
-    "y_test = test_set['Close']\n",
+    "y_test = test_set['Average']\n",
     "X_poly_test = poly_process.fit_transform(X_test)\n",
     "\n",
     "reg_lr_model = ElasticNet(alpha=0.3, l1_ratio=0.5)\n",
@@ -549,34 +549,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "95bab5e7-b03b-4c37-9f85-4fd611cca78c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for polynomial regression on training data\n",
-      "Polynomial regression with degree  3\n",
-      "  Default settings\n",
-      "Internal parameters:\n",
-      "    Bias is  26.15406295163936\n",
-      "    Coefficients [-5.03490316e-91  0.00000000e+00 -3.98676807e-54]\n",
-      "    Score 0.20066872989594386\n",
-      "MAE is  1.3429311686531353\n",
-      "RMSE is  1.6842481193987728\n",
-      "MSE is  2.836691727698303\n",
-      "R^2   0.20066872989594386\n",
-      "\n",
-      "Results for polynomial regression on test data\n",
-      "MAE is  1.3271907977502118\n",
-      "RMSE is  1.6987712134754418\n",
-      "MSE is  2.8858236357328253\n",
-      "R^2     0.047739027457221805\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
